# ITRI-final-project_LSTM-model-stock-prediction

./: .gitignore  LSTM model training.ipynb  README.md  model training.ipynb  pyproject.toml
input/: lstm_stock.h5  test20220218.csv  testdata_forline.csv  train_finalamend2.csv
src/: predict model.py
training_dataset/: sp500_data_test.csv  test202103.csv  train_finalamend.csv
utils/: dowjones.py  preprocess_stock_data.py  s&p 500.py
web crawling/: PHLXsemi_data.csv  dowj_data.csv  dowj_data_test.csv  dowjones.py  nasdaq.py  nasdaq_data.csv  sp500_data.csv  sp500_data_test.csv  sp500_data_test2.csv  twII.py  twII_data.csv
