[tool.poetry]
name = "itri-final-project-lstm-model-stock-prediction"
version = "0.1.0"
description = ""
authors = ["Sean <91415054+sean85120@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
pandas = "^2.2.2"
selenium = "^4.23.0"
beautifulsoup4 = "^4.12.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
keras = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
